[package]
name = "tournament_management"
version = "0.2.0"
authors = ["Owen Salter <owen@devosmium.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
kankyo = "0.3.0"
log = "0.4.8"
fern = "0.6.0"
chrono = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
fll-scoring = { path = "../core" }
handlebars = { version = "3.0.0", features = ["dir_source"] }
mongodb = "1.0.0"
bson = "1.0.0"
serde_json = "1.0"
futures = "0.3.5"
